# Breadboard-UART-ECU

./: BUILD.bazel  MODULE.bazel  memory_explorer.cpp  memory_layout_cpp_program_reminder.md  stage_0.md  stage_0_abridged.md
embedded-ecu/: main.cpp  ring_buffer.h  ring_buffer_test.cpp  uart.cpp  uart.h  uart_simulator.cpp  uart_simulator.h
experiments/: volatile_experiment.cpp
stage_0/: stage_0.md  stage_0_raw.md
stage_1/: stage_1.md
stage_2/: stage_2_directions.md
tests/: uart_simulator_test.cpp
