cc_library(
    name = "ring_buffer",
    hdrs = ["include/tiny_ecu/ring_buffer.h"],
    includes = ["include"],
    copts = ["-std=c++17", "-Wall", "-Wextra", "-Wpedantic"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "ring_buffer_test",
    srcs = ["tests/ring_buffer_test.cc"],
    deps = [":ring_buffer"],
)